<resources>
    <string name="app_name">早起打卡</string>
    <string name="qq_check_in_str">QQ打卡</string>
    <string name="qq_get_up_early_str">QQ早起打卡奖金赛</string>
    <string name="weibo_get_up_early_str">微博早起打卡赢现金</string>
    <string name="ali_tree_str">蚂蚁森林</string>
    <string name="ali_sport_str">支付宝运动</string>
    <string name="ali_manor_str">蚂蚁庄园</string>
    <string name="ali_sport_server_str">支付宝早起打卡挑战赛</string>
    <string name="ali_dd_server_str">支付宝天天红包赛</string>
    <string name="github_for_star_str">在GitHub上点个Star</string>
    <string name="app_version_str">版本：%1$s</string>
    <string name="view_setting_str">个性化设置</string>
    <string name="save_success_str">保存成功，重新打开APP生效</string>
    <string name="taobao_get_up_early_str">淘宝早起打卡挑战赛</string>
    <string name="jd_get_up_early_str">京东金融早起打卡</string>
    <string name="sort_tip_toast_str">长按某一项可以拖动排序哦</string>
    <string name="ali_health_get_up_early_str">支付宝健康早起打卡</string>
    <string name="ali_health_sports_early_str">支付宝运动打卡领健康金</string>
    <string name="check_update_failed_str">检查更新失败</string>
    <string name="check_update_negative_button_str">取消</string>
    <string name="check_update_positive_button_str">确定</string>
</resources>
